# uv-setuptools-rust-template

./: README.md  hello.py  pyproject.toml
rslib/: Cargo.toml
rslib/src/: lib.rs
